--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
     * {
       -webkit-tap-highlight-color: transparent;
     }
+
+    @keyframes card-deal {
+      0% {
+        opacity: 0;
+        transform: translate(-100px, -100px) rotate(-10deg) scale(0.8);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(0, 0) rotate(0deg) scale(1);
+      }
+    }
+
+    .animate-card-deal {
+      animation: card-deal 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+    }
   </style>
 <script type="importmap">
 {
