--- a/index.html
+++ b/index.html
@@ -30,8 +30,23 @@
       }
     }
 
+    @keyframes win-burst {
+      0% {
+        transform: translate(0, 0) rotate(0deg) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) scale(0);
+        opacity: 0;
+      }
+    }
+
     .animate-card-deal {
       animation: card-deal 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
+    }
+
+    .animate-win-particle {
+      animation: win-burst var(--duration) ease-out forwards;
     }
   </style>
 <script type="importmap">
